Change Notes
=============

2013-01-02 jbornema
	- Added SourceHelper class for adding folder content filtered by regular expression in the right order as FileSource to the process.

2012-12-20 jbornema
	- Added DateTransformer.skipRecordOnError when a date couldn't be parsed
	- ETLgineServer is adding the NotificationTransformer instance to ServerContext's data with name NotificationService.class.getName()
	- NotificationService.sendNotification(IJob job, IProcess process, String subject, String message, Throwable t) added
	  and message format improved
	- JDBCLoader, Job and ProcessChain error handling improved

2012-12-11 jbornema
	- Added CSVExtractor.trimColumnName to trim the identified column names.
	  Added UTF-8 encoding support and a buggy SFDC UTF-16BE BOM (generated twice).

2012-09-28 jbornema
	- Fixed NPE in CSVLoader when export is done into regular/unzipped file.

2012-09-19 jbornema
	- Due to OutOfMemoryException it can happen that the job state is enqueued without being in the queue.
	  Added isJobEnqueued(IJob) in class JobQueue and ETLgineServer.

2012-08-03 jbornema
	- Removed Job.activeContext and used Job.processChain.getGlobalContext() instead
	- Added JobQueue.getThread()
	- Second "Stop Flag" invokes JobQueue.getThread().interrupt() to get out of Thread.sleep() state
	- Synchronized DefaultMonitor.logToBuffer(String, String, Throwable) and JDBCMonitor.logToTable(String, String, Throwable)
	- JobQueue's Thread is now running in its own ThreadGroup

2012-08-02 jbornema
	- Committed many ETL future enhancements, bug-fixes, ORACLE support.
	  As too many files where touch, the tag "before_msaa_commit_2012_08_02" was created before commit.
	- Major changes:
		- New server.properties:
			- initializing.listener.classnames
				List of IServerInitializingListener classes to hook in the event of the ETL Server initialization
				
			- monitor.classname
				Defines the default IMonitor implementation